Revision history for Perl extension Padre::Plugin::PerlTidy.

0.09  to be released
    - Fixed #776: PerlTidy needs -nse and -nst options (MRWHIPPLE)

0.08  Mon Aug 17 2009
    - Center editor on active line after format (claudio)
    - Make cursor location storage less resource hungry (claudio)
    - Actually install the translations (RSN)
    - Added translations:
      - Japanese (ishigaki)
    - Updates for latest (0.43) API (BRICAS)
    - Add pod stubs so pod coverage will pass (BRICAS)
    - Renamed to the new Padre 0.43 PO naming scheme (azawawi)

0.07  Fri Jun 12 2009
    - Added translations:
      - German (hjansen)
      - Arabic (azawawi)
      - Spanish (brunov)
      - Brazilian Portuguese (garu)
    - Cursor location is kept after cleaning (instead of beginning document).
      (claudio)
    - Menu tests are now locale agnostic (BRICAS)

0.06  Wed May 20 2009
    - Keyboard shortcuts added (claudio)
    - Added translations:
      - French (jquelin)
      - Polish (therek)
      - Chinese (Traditional) translation (BLUET)

0.05  Mon Feb 09 2009
    - Use Padre 0.26 API for output window (KAARE)
    - Move author tests to release time checking (ADAMK + BRICAS)

0.04  Tue Jan 06 2009
    - Add HTML export feature (HJANSEN)
    - Capture errors from PerlTidy (HJANSEN)
    - Update for latest (0.23) API

0.03  Mon Dec 15 2008
    - Update for latest API

0.02  Thu Nov 27 2008
    - Use Module::Install::PadrePlugin to allow the user to install the plugin
      to their local dir
    - instead of use() Perl::Tidy, require() when needed
    - Update for the latest plugin system

0.01  Thu Oct 23 2008
    - original version